some typo fixes

--- a/src/main/resources/help/index.html
+++ b/src/main/resources/help/index.html
@@ -29,7 +29,7 @@
     "Stop" is inactive.</p>
 
     <p>Note: In order to browse simulation results, a separate database
-    browsing program, such as "SQLite Database Broswer" can be used. Program
+    browsing program, such as "SQLite Database Browser" can be used. Program
     database file "ags.db " is located in
     ..\aerosol-simulator-1.0-SNAPSHOT\etc\database\ folder.</p>
 
@@ -66,14 +66,14 @@
     becomes active. When simulation is done, again "Run" button is active and
     "Stop" is inactive.</p>
 
-    <p>Note: A whole incetion parameters set is described in one row. So there
-    are as many parameters sets to run as there are rows in file. Every
-    parameter is described with tho values - minimum and maximum value, written
-    between "" and parameters are separated with ;. Sample:
+    <p>Note: A whole inception parameters set is described in one row. So there
+    are as many parameters sets to run as there are rows in the file. Every
+    parameter is described with two values - minimum and maximum value, written
+    between "" and parameters itself are separated with ;. Sample:
     45";"50";"37";"";"1";"";.....;[line ends] means "Time period under
     consideration" minimum is 45 and maximum value is 50, "Number of evolution
     steps in a minute" has only minimum value defined - so this value will be
-    fixed to 37, Air tempetature has fixed value of 1 and so on.</p>
+    fixed to 37, Air temperature has fixed value of 1 and so on.</p>
 
     <p>For excel to export a proper CSV file for our program the List separator
     must be set as ; in your settings. To change that: Go to the Control Panel
@@ -88,7 +88,7 @@
     window activate the first column in the preview at the bottom and
     shift+click on the last column to activate all of them and choose text as
     the column data format in the upper left corner and click finish. Now it
-    should have imported int excel and each of the data points is in a separate
+    should have imported into excel and each of the data points is in a separate
     column.</p>
 
     <p><strong>Related buttons &amp; features:</strong></p>
@@ -138,8 +138,8 @@
     window will pop-up with an option to save (up to ten closest) results into
     a file.</p>
 
-    <p>File with Reference values are located in
-    ..\aerosol-simulator-1.0-SNAPSHOT\etc\conf" foldef ref.xl file. Second line
+    <p>File with reference values are located in
+    ..\aerosol-simulator-1.0-SNAPSHOT\etc\conf" folder, ref.xl file. Second line
     is column "weights".</p>
 
     <p><strong>Set best parameters</strong></p>
@@ -151,7 +151,7 @@
     features<a class="section_anchor" href="#Extra_features"></a></h1>
 
     <p>You can export all your local program data into a file and import to
-    other computer with same program or make searches in you local database
+    other computer with same program or make searches in local database
     without having any database browser program, such as "SQLite Database
     Browser" installed into your computer.</p>
 
