[2096227] Checkbox in Utilities window for labels under icons for toolbar buttons. non-persistent. [2127567] Added Set as Failed button. Added images of icons to help.

--- a/src/main/resources/help/index.html
+++ b/src/main/resources/help/index.html
@@ -93,32 +93,32 @@
 
     <p><strong>Related buttons &amp; features:</strong></p>
 
-    <p><strong>"Run"</strong> - start simulation(s);</p>
+    <p><img src="../images/toolbar/16/start.png"> <strong>"Run"</strong> - start simulation(s);</p>
 
-    <p><strong>"Stop Current Process"</strong> - skip current calculation
+    <p><img src="../images/toolbar/16/stop.png"> <strong>"Stop Current Process"</strong> - skip current calculation
     process and go to next;</p>
 
-    <p><strong>"Stop Simulation"</strong> - finish calculations with ongoing
+    <p><img src="../images/toolbar/16/stop.png"> <strong>"Stop Simulation"</strong> - finish calculations with ongoing
     inception parameters set and stop;</p>
 
     <p><strong>"# of runs"</strong> - determine how many simulations should be
     done. Can be used when one or more inception parameters are generated;</p>
 
-    <p><strong>Comment field</strong> - comment field information will be
+    <p><img src="../images/toolbar/16/comment.png"> <strong>Comment field</strong> - comment field information will be
     included to a database when simulation is done;</p>
 
-    <p><strong>"Clear"</strong> - clear all "Minimum" and "Maximum" values;</p>
+    <p><img src="../images/toolbar/16/clear.png"> <strong>"Clear"</strong> - clear all "Minimum" and "Maximum" values;</p>
 
-    <p><strong>"Defaults"</strong> - set default values to all "Minimum"
+    <p><img src="../images/toolbar/16/reset.png"> <strong>"Defaults"</strong> - set default values to all "Minimum"
     fields;</p>
 
-    <p>"<strong>Save Parameters</strong>" - save all parameters into a
+    <p><img src="../images/toolbar/16/save.png"> <strong>"Save Parameters"</strong> - save all parameters into a
     file;</p>
 
-    <p>"<strong>Open Parameters</strong>" - load previously saved parameters
+    <p><img src="../images/toolbar/16/open.png"> <strong>"Open Parameters"</strong> - load previously saved parameters
     into fields;</p>
 
-    <p><strong>"Undo"</strong> and <strong>"redo"</strong> - take previous step
+    <p><img src="../images/toolbar/16/undo.png"> <strong>"Undo"</strong> and <img src="../images/toolbar/16/redo.png"> <strong>"Redo"</strong> - take previous step
     back or opposite;</p>
 
     <h1><a id="Analysis" name="Analysis"></a>Analysis<a class="section_anchor"
