minor help update

--- a/src/main/resources/help/index.html
+++ b/src/main/resources/help/index.html
@@ -186,6 +186,6 @@
     button again. Simulations group (order) simply has the maximum fields set.
     If you start simulating based on these min and max values the application
     might generate totally different simulation parameters than it did in the
-    past, because it takes something random between min and max.</p>
+    past, because it generates randomly between min and max values.</p>
 </body>
 </html>
