just a minor help update

--- a/src/main/resources/help/index.html
+++ b/src/main/resources/help/index.html
@@ -185,7 +185,7 @@
     "Order" from drop-down menu, put that id into a text field and press the
     button again. Simulations group (order) simply has the maximum fields set.
     If you start simulating based on these min and max values the application
-    might generate totally different simulation parameters than it did in the
+    will generate totally different simulation parameters as it did in the
     past, because it generates randomly between min and max values.</p>
 </body>
 </html>
